# MLTeammate

./: .coverage  LICENSE  MANIFEST.in  PROJECT_DESIGN_PRINCIPLES.md  README.md  best_model.pkl  main.py  pyproject.toml  pytest.ini  restructure_project.py  setup.py  test_results.json
MLTeammate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: extending.md  fixes.md  getting_started.md  installation.md  interface_contracts.md  progress.md  tutorials.md
examples/: classification.py
ml/automl/: automl.py
ml_teammate/: __init__.py
ml_teammate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ml_teammate/automl/: __init__.py  automl.py  callbacks.py  controller.py  tuner_interface.py
ml_teammate/data/: __init__.py  overfit_monitor.py  preprocessing.py  resampler.py  validation.py
ml_teammate/experiments/: __init__.py  benchmark_runner.py  config.yaml  mlflow_helper.py
ml_teammate/interface/: __init__.py  api.py  cli.py  simple_api.py
ml_teammate/learners/: __init__.py  lightgbm_learner.py  registry.py  xgboost_learner.py
ml_teammate/search/: # python programming practice.py  __init__.py  base.py  config_space.py  eci.py  flaml_search.py  optuna_search.py  random_search.py
ml_teammate/tutorials/: 01_quickstart_basic.py  02_with_cross_validation.py  03_with_mlflow.py  04_add_custom_learner.py  05_optuna_search_example.py  06_simple_api_example.py  07_advanced_search_example.py  08_pandas_style_example.py
ml_teammate/utils/: __init__.py  logger.py  metrics.py  schema.py  timer.py
mlruns/0/: meta.yaml
mlteammate_artifacts/: trial_configs.json
tests/: run_tests.py  simple_test_runner.py  test_automl_controller.py  test_callbacks.py  test_error_handling.py  test_learner_registry.py  test_performance_benchmarks.py  test_phase1_foundation.py  test_search_components.py  test_simple_api.py  test_tutorials_integration.py
(+176 files in other folders)
